<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:title="@string/product" />

        <item
            android:id="@+id/nav_customer"
            android:title="Customer" />

        <item
            android:id="@+id/nav_transaction"
            android:title="@string/transaction" />

        <item
            android:id="@+id/nav_analytics"
            android:title="Analytic" />

        <item
            android:id="@+id/nav_setting"
            android:title="Settings" />

        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>
